--- a/adlib_dbunit_mongo/pom.xml
+++ b/adlib_dbunit_mongo/pom.xml
@@ -3,13 +3,28 @@
 	<modelVersion>4.0.0</modelVersion>
 	<groupId>com.gotoagile</groupId>
 	<artifactId>dbunit_mongo</artifactId>
-	<version>1.0.1-SNAPSHOT</version>
+	<version>1.0.2-SNAPSHOT</version>
 
 	<scm>
 		<connection>scm:svn:https://github.com/cuvaalex/dbunit-mongodb.git</connection>
 		<developerConnection>scm:svn:https://github.com/cuvaalex/dbunit-mongodb.git</developerConnection>
         <tag>master</tag>
 	</scm>
+
+    <distributionManagement>
+        <repository>
+            <id>nexus</id>
+            <url>
+                http://192.168.77.147:8081/nexus/content/repositories/releases/${project.groupId}/${project.artifactId}/${project.version}
+            </url>
+        </repository>
+        <snapshotRepository>
+            <id>snapshots</id>
+            <url>
+                http://192.168.77.147:8081/nexus/content/repositories/snapshots/${project.groupId}/${project.artifactId}/${project.version}
+            </url>
+        </snapshotRepository>
+    </distributionManagement>
 
     <properties>
         <!-- Mongo DB Default Config -->
